--- a/ProjectSem_3/Manage_staff/Views/Staffs/Index.cshtml
+++ b/ProjectSem_3/Manage_staff/Views/Staffs/Index.cshtml
@@ -1,9 +1,16 @@
 ﻿@model IEnumerable<Manage_staff.Models.Staff>
+@using Microsoft.AspNetCore.Http
 
 @{
     ViewData["Title"] = "Index";
 }
 
+<div>
+    <h3>Welcome, @Context.Session.GetString("ename")</h3>
+</div>
+<br />
+@Html.ActionLink("Logout", "Logout", "Staffs")
+<br />
 <h2>List of Staffs</h2>
 <br />
 <p>
@@ -29,7 +36,7 @@
             <td>@item.StaffName</td>
             <td>@item.JoinDate.ToShortDateString()</td>
             <td>
-                <img src="@item.ProfileImage" width="50" height="50"/>
+                <img src="@item.ProfileImage" width="50" height="50" />
             </td>
             <td>@item.Email</td>
             <td>@item.Phone</td>
