Student 1.0 Design new

--- a/ProjectSem_3/Manage_student/Views/Students/Create.cshtml
+++ b/ProjectSem_3/Manage_student/Views/Students/Create.cshtml
@@ -63,8 +63,7 @@
     <tr>
         <td>@Html.LabelFor(s => s.ProfileImage)</td>
         <td colspan="1">
-            @*<input type="file" name="file" />*@
-            @Html.EditorFor(s=>s.ProfileImage)
+            <input type="file" name="file" />            
         </td>
     </tr>
     <tr>
