--- a/ProjectSem_3/Manage_student/Views/Students/Index.cshtml
+++ b/ProjectSem_3/Manage_student/Views/Students/Index.cshtml
@@ -1,9 +1,12 @@
 ﻿@model IEnumerable<Manage_student.Models.Student>
+@using Microsoft.AspNetCore.Http
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>List of Students</h1>
+@*<div>
+    <h3>Welcome, @Context.Session.GetString("ename")</h3>
+</div>*@
 <br />
 <p>
     @Html.ActionLink("Create New Student", "Create", "Students")
