fix errors of staff and time errors of competitions/exhibitions

--- a/ProjectSem_3/Manage_staff/Views/Staffs/Index.cshtml
+++ b/ProjectSem_3/Manage_staff/Views/Staffs/Index.cshtml
@@ -5,9 +5,9 @@
     ViewData["Title"] = "Index";
 }
 
-<div>
+@*<div>
     <h3>Welcome, @Context.Session.GetString("ename")</h3>
-</div>
+</div>*@
 <br />
 @Html.ActionLink("Logout", "Logout", "Staffs")
 <br />
