remove password row from Info view of Staff

--- a/ProjectSem_3/Manage_staff/Views/Staffs/Info.cshtml
+++ b/ProjectSem_3/Manage_staff/Views/Staffs/Info.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Info";
 }
 
-<h1>Test Page</h1>
+<h1>Staff Info</h1>
 
 <div>
     <hr />
@@ -14,12 +14,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.StaffName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Password)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Password)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.JoinDate)
