StudentDesignPosting (Hoan thien phan UploadViewPosting) and manage_Design co bang Search design theo mark

--- a/ProjectSem_3/Student_Design_Posting/Views/StudentDesignPosting/Edit.cshtml
+++ b/ProjectSem_3/Student_Design_Posting/Views/StudentDesignPosting/Edit.cshtml
@@ -21,7 +21,7 @@
             @Html.LabelFor(d => d.Painting)
             @Html.HiddenFor(d => d.Painting)
             @Html.ValidationMessageFor(d => d.Painting)
-            <img src="../@Html.DisplayFor(d=>d.Painting)" width="100" height="100" alt="@Html.DisplayFor(d=>d.DesignId)" />
+            <img src="../../@Html.DisplayFor(d=>d.Painting)" width="100" height="100" alt="@Html.DisplayFor(d=>d.DesignId)" />
             <div>
                 <input type="file" name="file" />
             </div>
