--- a/ProjectSem_3/Student_Design_Posting/Views/StudentDesignPosting/Upload.cshtml
+++ b/ProjectSem_3/Student_Design_Posting/Views/StudentDesignPosting/Upload.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Upload";
 }
-
+@using Microsoft.AspNetCore.Http
 <h1>Upload Design</h1>
 @using (Html.BeginForm("Upload", "StudentDesignPosting", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
@@ -33,10 +33,42 @@
     </div>
 }
 <div>
-    @Html.ActionLink("Back to InCommingCompetition", "InCommingCompetition", "StudentDesignPosting")
+    @ViewBag.Msg
 </div>
 <div>
-    <h3>@ViewBag.Msg</h3>
+    @Html.ActionLink("Back to InCommingCompetition", "InCommingCompetition", "StudentDesignPosting")
 </div>
 <hr />
-
+<h2>List of @Context.Session.GetString("studentid") Design</h2>
+<div style="overflow-x:auto">
+    <table class="table table-striped">
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.DesignId)</th>
+            <th>@Html.DisplayNameFor(model => model.DesignName)</th>
+            <th>@Html.DisplayNameFor(model => model.Painting)</th>
+            <th>@Html.DisplayNameFor(model => model.Description)</th>
+            <th>@Html.DisplayNameFor(model => model.SubmitDate)</th>
+            <th>Fullname</th>
+            <th></th>
+        </tr>
+        @foreach (var item in (List<DesignStudent>)ViewBag.designList)
+        {
+            <tr>
+                <td>@item.Design.DesignId</td>
+                <td>@Html.DisplayFor(m => item.Design.DesignName)</td>
+                <td><img src="../../@item.Design.Painting" width="100" height="100" alt="@item.Design.DesignId" /></td>
+                <td>@Html.DisplayFor(m => item.Design.Description)</td>
+                <td>@Html.DisplayFor(m => item.Design.SubmitDate)</td>
+                <td>
+                    @{
+                        var FullName = item.Student.FirstName + " " + item.Student.LastName;
+                        @Html.DisplayFor(m => FullName)
+                    }
+                </td>
+                <td>
+                    @Html.ActionLink("Update", "Edit", new { id = item.Design.DesignId })
+                </td>
+            </tr>
+        }
+    </table>
+</div>
