--- a/ProjectSem3_merged/ProjectSem3_merged/Views/Displays/Index.cshtml
+++ b/ProjectSem3_merged/ProjectSem3_merged/Views/Displays/Index.cshtml
@@ -4,8 +4,15 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>List of Competitions</h2>
-
+<h2>List of Displays</h2>
+<br />
+@using (Html.BeginForm("Index", "Displays", FormMethod.Post))
+{
+    <label>Select an Exhibition: </label>
+    @Html.DropDownList("ename", ViewBag.data as SelectList, "All")
+    <input type="submit" value="Search">
+}
+<br />
 <p>
     <a asp-action="Create">Create New Display</a>
 </p>
