--- a/ProjectSem3_merged/ProjectSem3_merged/Views/Competitions/Index.cshtml
+++ b/ProjectSem3_merged/ProjectSem3_merged/Views/Competitions/Index.cshtml
@@ -5,6 +5,11 @@
 }
 
 <h2>List of Competitions</h2>
+@using (Html.BeginForm("Index", "Competitions", FormMethod.Post))
+{
+    <input type="text" name="cname" placeholder="Enter a Comeptition" />
+    <input type="submit" value="Search">
+}
 <p>
     <a asp-action="Create">Create New Competition</a>
 </p>
@@ -12,7 +17,7 @@
 @foreach (var item in Model)
 {
     <div style="font-size:medium" class="font-weight-bold border-dark">
-        <div class="border"><img src="@item.Competition.CompetitionImages" width="100" height="100" /></div>
+        <div class="border"><img src="../@item.Competition.CompetitionImages" width="100" height="100" /></div>
         <div class="border">@item.Competition.CompetitionName</div>
         <div class="border">@item.Competition.StartDate&nbsp;|&nbsp;@item.Competition.EndDate</div>
         <div class="border">Organizer: @item.Staff.StaffName</div>
@@ -21,5 +26,6 @@
             @Html.ActionLink("Delete", "Delete", new { id = item.Competition.CompetitionId }, new { onClick = "return confirm('Are you sure?')" })
         </div>
     </div>
-    <br /><br />
+    <br />
+    <br />
 }
